# rabitq-rs

./: .gitignore  AGENTS.md  ARM64_FIX_SUMMARY.md  ARM64_INVESTIGATION_SUMMARY.md  ARM64_KNOWN_ISSUES.md  AVX512_FIX_SUMMARY.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  FILTERED_SEARCH.md  GEMINI.md  LUT_EXPLANATION.md  MSTG_HOTSPOT_ANALYSIS.md  Makefile  OPTIMIZATION.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_GAP_ANALYSIS.md  README.md  RELEASING.md  TODO.md  pyproject.toml  rust-toolchain.toml  test_ivf_optimized.py  test_lut_correctness.py  test_python_bindings.py  test_recall_accuracy.py
.cargo/: config.toml
.github/workflows/: ci.yml  python.yml  release.yml
ann_benchmarks/: config.yml  module.py
ann_benchmarks/algorithms/: rabitq_ivf.py
ann_benchmarks_templates/: README.md
ann_benchmarks_templates/rabitq-ivf/: config.yml  module.py
ann_benchmarks_templates/rabitq-mstg/: Dockerfile  config.yml  module.py
benchmarks/: plot_recall_qps.py
benchmarks/gist_1m_results/: README.md  recall_qps_fixed.csv
docs/: MSTG_DESIGN.md  MSTG_IMPLEMENTATION_PLAN.md  MSTG_PERFORMANCE_IMPROVEMENTS.md  MSTG_SPEC.md  NEXT_SESSION_PROMPT.md  PACKING_FORMAT_ANALYSIS.md
docs/docs/: quick_start.md
examples/: benchmark_comparison.rs  benchmark_gist.rs  benchmark_mini.rs  benchmark_mstg_gist.rs  benchmark_quick.rs  brute_force_search.rs  debug_quantization.rs  filtered_search.rs  kmeans_bench.rs  mstg_demo.rs  mstg_quickstart.rs  performance_test.rs  profile_mstg_search.rs  profile_mstg_search_fast.rs  profile_mstg_search_tiny.rs  readme_quickstart.rs  recall_qps_sweep.rs  smart_loader.rs  test_huge_pages.rs  test_ip_arm.rs  test_l2_arm.rs
python/rabitq_rs/: __init__.py
rabitqlib/fastscan/: fastscan.hpp  highacc_fastscan.hpp
rabitqlib/index/: query.hpp
rabitqlib/index/ivf/: ivf.hpp
rabitqlib/index/symqg/: qg.hpp  qg_builder.hpp
rabitqlib/quantization/: pack_excode.hpp  rabitq_impl.hpp
rabitqlib/utils/: buffer.hpp  rotator.hpp  simd_support.hpp  space.hpp  warmup_space.hpp
sample/: CMakeLists.txt  hnsw_rabitq_indexing.cpp  hnsw_rabitq_querying.cpp  ivf_rabitq_indexing.cpp  ivf_rabitq_indexing_ip.cpp  ivf_rabitq_querying.cpp  symqg_indexing.cpp  symqg_querying.cpp
sample/tests/: pack_excode_scalar_test.cpp
src/: brute_force.rs  fastscan.rs  index.rs  io.rs  ivf.rs  kmeans.rs  lib.rs  math.rs  memory.rs  mstg.rs  prefetch.rs  python_bindings.rs  quantizer.rs  rotation.rs  simd.rs  tests.rs
src/mstg/: builder.rs  closure.rs  clustering.rs  config.rs  distance.rs  distance_simd.rs  hnsw.rs  index.rs  io.rs  metadata.rs  mod.rs  posting_list.rs  scalar_quant.rs  search.rs
