[package]
name = "rabitq-rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the RaBitQ quantization scheme with IVF search tooling"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lqhl/rabitq"
documentation = "https://docs.rs/rabitq-rs"
keywords = ["ann", "vector-search", "quantization", "ivf", "similarity"]
categories = ["algorithms", "science"]

[dependencies]
matrixmultiply = "0.3"
rayon = "1.8"
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
thiserror = "1.0"
signal-hook = { version = "0.3", features = ["iterator"] }

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }

[lib]
name = "rabitq_rs"
path = "src/lib.rs"
