[package]
name = "rabitq-rs"
version = "0.3.1"
edition = "2021"
description = "Rust implementation of the RaBitQ quantization scheme with IVF search tooling"
license = "Apache-2.0"
readme = "README.md"
authors = ["Qin Liu <lqgy2001@gmail.com>"]
repository = "https://github.com/lqhl/rabitq-rs"
documentation = "https://docs.rs/rabitq-rs"
keywords = ["ann", "vector-search", "quantization", "ivf", "similarity"]
categories = ["algorithms", "science"]

[dependencies]
matrixmultiply = "0.3"
rayon = "1.8"
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
thiserror = "1.0"
signal-hook = { version = "0.3", features = ["iterator"] }
crc32fast = "1.3"
roaring = "0.10"

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }
kentro = "0.2"
ndarray = "0.16"

[lib]
name = "rabitq_rs"
path = "src/lib.rs"

[[bin]]
name = "ivf_rabitq"
path = "src/bin/ivf_rabitq.rs"

[package.metadata.docs.rs]
all-features = true
