[package]
name = "rabitq-rs"
version = "0.5.0"
edition = "2021"
description = "Advanced vector search: RaBitQ quantization with IVF and MSTG (Multi-Scale Tree Graph) index"
license = "Apache-2.0"
readme = "README.md"
authors = ["Qin Liu <lqgy2001@gmail.com>"]
repository = "https://github.com/lqhl/rabitq-rs"
documentation = "https://docs.rs/rabitq-rs"
keywords = ["ann", "vector-search", "quantization", "ivf", "similarity"]
categories = ["algorithms", "science"]

[dependencies]
matrixmultiply = "0.3"
rayon = "1.8"
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
thiserror = "1.0"
signal-hook = { version = "0.3", features = ["iterator"] }
crc32fast = "1.3"
roaring = "0.10"

# MSTG-specific dependencies
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
memmap2 = "0.9"
parking_lot = "0.12"
half = "2.3"  # For FP16 support (future use)

# HNSW implementation
hnsw_rs = "0.2"  # High-performance HNSW implementation with parallel construction

# Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
numpy = { version = "0.20", optional = true }

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }

[lib]
name = "rabitq_rs"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["pyo3", "numpy"]
avx512 = []  # Enable native AVX-512 SIMD (requires nightly Rust)

[package.metadata.docs.rs]
all-features = true
